syntax = "proto3";
package cores;

option go_package = "github.com/snple/kirara/pb/cores;cores";

import "device_message.proto";
import "generic_message.proto";

message DeviceListRequest {
    pb.Page page = 1;
    string tags = 2;
    string type = 3;
    string arch = 4;
}

message DeviceListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Device device = 3;
}

message DeviceLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message DevicePullRequest {
    int64 after = 1;
    uint32 limit = 2;
    string type = 3;
    string arch = 4;
}

message DevicePullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Device device = 3;
}

service DeviceService {
    rpc Create(pb.Device) returns (pb.Device) {}
    rpc Update(pb.Device) returns (pb.Device) {}
    rpc View(pb.Id) returns (pb.Device) {}
    rpc Name(pb.Name) returns (pb.Device) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(DeviceListRequest) returns (DeviceListResponse) {}
    rpc Link(DeviceLinkRequest) returns (pb.MyBool) {}
    rpc Destory(pb.Id) returns (pb.MyBool) {}
    rpc Clone(pb.Id) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Device) {}
    rpc Pull(DevicePullRequest) returns (DevicePullResponse) {}
    rpc Sync(pb.Device) returns (pb.MyBool) {}
}
